[findBugs] Use Integer.valueOf() instead of inefficient constructor
Change-Id: Ie47fa49f370f579bed76b36bde1abbd36f058b4d
Signed-off-by: Matthias Sohn <matthias.sohn@sap.com>